--- a/styles.css
+++ b/styles.css
@@ -12,5 +12,43 @@ html, body {
   margin: 0;
   height: 100%;
   min-height: 100%;
-  background-color: #121212 !important;
+  /* background-color: #121212 !important; */
+}
+
+main {
+  margin-top: 80px;
+}
+
+.navbar > .container {
+  max-width: 85% !important;
+}
+
+.caret {
+  top: -25px;
+  left: 50%;
+  width: 0;
+  height: 0;
+  position: relative;
+}
+.caret:before,
+.caret:after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 0;
+  height: 0;
+  border-width: 7px 8px;
+  border-style: solid;
+  border-color: transparent;
+  z-index: 1001;
+}
+.caret:after {
+  bottom: -18px;
+  right: -8px;
+  border-bottom-color: #fff;
+}
+.caret:before {
+  bottom: -17px;
+  right: -8px;
+  border-bottom-color: rgba(0,0,0,.15);
 }
