--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,16 @@ html, body {
   margin: 0;
   height: 100%;
   min-height: 100%;
-  /* background-color: #121212 !important; */
+  background-color: #121212 !important;
 }
 
 main {
   margin-top: 80px;
+  height: 100%;
+}
+
+.container {
+  /* min-height: 1000px !important; */
 }
 
 .navbar > .container {
