--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,8 @@
 
 html, body {
   margin: 0;
-  height: 100%;
-  min-height: 100%;
+  /* height: 100%;
+  min-height: 100%; */
   background-color: #121212 !important;
 }
 
@@ -20,8 +20,27 @@ main {
   height: 100%;
 }
 
-.container {
-  /* min-height: 1000px !important; */
+/* #__next {
+  height: 100%;
+} */
+
+/* .container {
+  height: 80%;
+} */
+
+#content-wrap > .row {
+  margin-left: 0px;
+  margin-right: 0%;
+}
+
+#login-container {
+  position: relative;
+  min-height: 90vh;
+}
+
+#page-container {
+  position: relative;
+  min-height: 100vh;
 }
 
 .navbar > .container {
