--- a/apps/artemis-web/pages/styles.css
+++ b/apps/artemis-web/pages/styles.css
@@ -53,7 +53,7 @@ footer > .MuiContainer-root {
 }
 .caret:before,
 .caret:after {
-  content: "";
+  content: '';
   position: absolute;
   display: block;
   width: 0;
@@ -72,4 +72,8 @@ footer > .MuiContainer-root {
   bottom: -17px;
   right: -8px;
   border-bottom-color: rgba(0, 0, 0, 0.15);
+}
+
+a:hover {
+  cursor: pointer;
 }
