--- a/apps/artemis-web/pages/styles.css
+++ b/apps/artemis-web/pages/styles.css
@@ -8,6 +8,12 @@
   align-items: center;
 }
 
+.selectedButton {
+  border-color: black !important;
+  border-width: 4px;
+  color: black !important;
+}
+
 html,
 body {
   margin: 0;
