feat: missing tables and buttons from pgp updates and hijacks

--- a/apps/artemis-web/pages/styles.css
+++ b/apps/artemis-web/pages/styles.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.expand-cell,
+.expand-cell-header {
+  cursor: pointer !important;
+}
+
 .hv-center {
   display: flex;
   justify-content: center;
