feat: bgp announcement and withdrawal buttons

--- a/apps/artemis-web/pages/styles.css
+++ b/apps/artemis-web/pages/styles.css
@@ -68,6 +68,10 @@ footer > .MuiContainer-root {
   max-width: 85% !important;
 }
 
+.card {
+  border: 0px;
+}
+
 .caret {
   top: -25px;
   left: 50%;
