--- a/apps/artemis-web/pages/styles.css
+++ b/apps/artemis-web/pages/styles.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+#config > .react-codemirror2 > .CodeMirror {
+  height: 500px !important;
+}
+
 .hv-center {
   display: flex;
   justify-content: center;
