page search and filers + view hijack page (#46)
* feat: missing tables and buttons from pgp updates and hijacks

* feat:  Related BGP Updates added

* feat:  Related bgp table shows filtered data + colors added + distinct values

* fix: handle exception, fix version and disable zap

* feat: missing tables and buttons from pgp updates and hijacks

* feat:  Related BGP Updates added

* feat:  Related bgp table shows filtered data + colors added + distinct values

* fix: rebase with master

* fix: type + rpki column rendering bug

* fix: update lockfile

* fix: reduce complexity

* fix: timestamps, wrong column fields, missing filters, handled image added

* fix: live module uptime

* feat: bgp announcement and withdrawal buttons

* fix: build error

* fix: build error

* fix: refactoring

* fix: test warning

* fix: syntax error

* feat: view hijack form

* feat: Add default messages when there are no BGP Updates/Hijacks

* refactor: export styles to file

* feat: fetch ASN info

* feat: responsive tables

* fix: react-tooltips instead of bootstrap

* fix: pagination

* fix: add missing tooltip from hijack info

* fix: size per page custom dropdown

* feat: password change functionality (#49)

* feat: password change functionality

* fix: build error

* fix: ssg on view hijack link

* fix: reverting previous changes + remove anchor from Link

* fix: useGraphQl also returns loading and error, included button on hijack Link, 404 page when hijack does not exist

* fix: address codefactor issues

* fix: covert tooltip to react-tooltip

* fix: gitpod yaml values for local

* feat: tooltips for bgp announcements + withdrawals + 404->401

* feat: NotAuthHOC -> AuthHOC

* fix: more mock bgp updates

* fix: table styling, download as csv button, show entries on top

* fix: tooltips on distinct values

* fix: tooltips loading message + Display Peers Seen Hijack ui fix

* fix: Display Peers See

--- a/apps/artemis-web/pages/styles.css
+++ b/apps/artemis-web/pages/styles.css
@@ -2,6 +2,42 @@
   text-align: center;
 }
 
+.react-bootstrap-table-page-btns-ul {
+  float: right;
+}
+
+.show.react-bs-table-sizePerPage-dropdown ul:last-child {
+  display: block;
+}
+
+#paging {
+  float: left;
+}
+
+.react-bs-table-sizePerPage-dropdown,
+.react-bootstrap-table-pagination-total {
+  float: left;
+  margin-left: 10px;
+}
+
+.expand-cell,
+.expand-cell-header,
+.sortable {
+  cursor: pointer !important;
+}
+
+td {
+  text-align: center;
+}
+
+#modules > tbody > tr > td {
+  text-align: left !important;
+}
+
+#modules {
+  border: 1px solid #dee2e6;
+}
+
 .hv-center {
   display: flex;
   justify-content: center;
@@ -22,6 +58,10 @@ body {
   background-color: #121212 !important;
 }
 
+#config > .react-codemirror2 > .CodeMirror {
+  height: 500px !important;
+}
+
 main {
   margin-top: 80px;
   height: 100%;
@@ -31,8 +71,18 @@ footer > .MuiContainer-root {
   margin-left: 8%;
 }
 
+@media all and (max-width: 700px) and (min-width: 300px) {
+  .col-lg-1 {
+    display: none;
+  }
+
+  .col-lg-10 {
+    width: 100% !important;
+    max-width: 100% !important;
+  }
+}
+
 #content-wrap > .row {
-  margin-left: 0px;
   margin-right: 0%;
 }
 
