--- a/apps/artemis-web/pages/styles.css
+++ b/apps/artemis-web/pages/styles.css
@@ -56,6 +56,7 @@ body {
   /* height: 100%;
   min-height: 100%; */
   background-color: #121212 !important;
+  font-size: 0.9rem;
 }
 
 #config > .react-codemirror2 > .CodeMirror {
