fix: table filter state + table no data entry

--- a/apps/artemis-web/pages/styles.css
+++ b/apps/artemis-web/pages/styles.css
@@ -18,6 +18,10 @@ p > img {
   float: left;
 }
 
+#nodata {
+  height: 256px !important;
+}
+
 .react-bs-table-sizePerPage-dropdown,
 .react-bootstrap-table-pagination-total {
   float: left;
