--- a/apps/artemis-web/pages/styles.css
+++ b/apps/artemis-web/pages/styles.css
@@ -177,6 +177,6 @@ a:hover {
   cursor: pointer;
 }
 
-.hijack-table > .react-bootstrap-table > table > tbody:nth-child(3) > tr {
-  background-color: gold;
+.highlight-row {
+  background-color: gold !important;
 }
