--- a/apps/artemis-web/pages/styles.css
+++ b/apps/artemis-web/pages/styles.css
@@ -10,6 +10,12 @@ p > img {
   float: right;
 }
 
+.login-form {
+  border: 1px solid grey !important;
+  padding: 15px;
+  border-radius: 10px;
+}
+
 .show.react-bs-table-sizePerPage-dropdown ul:last-child {
   display: block;
 }
@@ -63,7 +69,7 @@ body {
   margin: 0;
   /* height: 100%;
   min-height: 100%; */
-  background-color: #121212 !important;
+  /* background-color: #121212 !important; */
   font-size: 0.9rem;
 }
 
