--- a/apps/artemis-web/pages/styles.css
+++ b/apps/artemis-web/pages/styles.css
@@ -59,9 +59,15 @@ td {
 }
 
 .selectedButton {
-  border-color: black !important;
+  border-color: #007bff !important;
   border-width: 4px;
-  color: black !important;
+  color: #007bff !important;
+}
+
+.defaultButton {
+  border-color: #6c757d !important;
+  border-width: 4px;
+  color: #6c757d !important;
 }
 
 html,
