--- a/apps/artemis-web/pages/styles.css
+++ b/apps/artemis-web/pages/styles.css
@@ -58,6 +58,22 @@ td {
   align-items: center;
 }
 
+.__react_component_tooltip {
+  background-color: #014379 !important;
+  opacity: 1 !important;
+  max-width: 500px !important;
+  padding: 20px !important;
+  color: #fff !important;
+  font-weight: bold !important;
+  text-align: left !important;
+  border-radius: 0.25rem !important;
+  font-size: 0.9rem !important;
+}
+
+.timefilter {
+  font-size: 0.7rem !important;
+}
+
 .selectedButton {
   border-color: #007bff !important;
   border-width: 4px;
