--- a/apps/artemis-web/pages/styles.css
+++ b/apps/artemis-web/pages/styles.css
@@ -112,15 +112,6 @@ body {
   height: 500px !important;
 }
 
-main {
-  margin-top: 80px;
-  height: 100%;
-}
-
-footer > .MuiContainer-root {
-  margin-left: 8%;
-}
-
 @media all and (max-width: 700px) and (min-width: 300px) {
   .col-lg-1 {
     display: none;
@@ -132,6 +123,10 @@ footer > .MuiContainer-root {
   }
 }
 
+#content-wrap {
+  min-height: calc(87vh - 70px);
+}
+
 #content-wrap > .row {
   margin-right: 0%;
 }
@@ -140,9 +135,26 @@ footer > .MuiContainer-root {
   margin-bottom: 40px;
 }
 
-#login-container {
+.navbar {
+  min-height: 60px;
+}
+
+.main-container {
+  min-height: calc(87vh - 80px);
+}
+
+main {
+  min-height: calc(87vh - 80px);
+}
+
+.main-container {
   position: relative;
-  min-height: 87vh;
+  margin-top: 80px;
+  margin-bottom: 80px;
+}
+
+.main-container > .container {
+  padding-top: 40px;
 }
 
 #page-container {
