--- a/apps/artemis-web/pages/styles.css
+++ b/apps/artemis-web/pages/styles.css
@@ -2,8 +2,29 @@
   text-align: center;
 }
 
+p > img {
+  height: 20rem !important;
+}
+
 .react-bootstrap-table-page-btns-ul {
   float: right;
+}
+
+.footer {
+  position: relative;
+  width: 100%;
+  line-height: 46px;
+  background-color: #f2f2f2;
+  border-top: 1px solid #e4e4e4;
+  color: black;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.login-form {
+  border: 1px solid grey !important;
+  padding: 15px;
+  border-radius: 10px;
 }
 
 .show.react-bs-table-sizePerPage-dropdown ul:last-child {
@@ -12,6 +33,10 @@
 
 #paging {
   float: left;
+}
+
+#nodata {
+  height: 256px !important;
 }
 
 .react-bs-table-sizePerPage-dropdown,
@@ -44,10 +69,32 @@ td {
   align-items: center;
 }
 
+.__react_component_tooltip {
+  background-color: #014379 !important;
+  opacity: 1 !important;
+  max-width: 500px !important;
+  padding: 20px !important;
+  color: #fff !important;
+  font-weight: bold !important;
+  text-align: left !important;
+  border-radius: 0.25rem !important;
+  font-size: 0.9rem !important;
+}
+
+.timefilter {
+  font-size: 0.7rem !important;
+}
+
 .selectedButton {
-  border-color: black !important;
+  border-color: #007bff !important;
   border-width: 4px;
-  color: black !important;
+  color: #007bff !important;
+}
+
+.defaultButton {
+  border-color: #6c757d !important;
+  border-width: 4px;
+  color: #6c757d !important;
 }
 
 html,
@@ -55,20 +102,14 @@ body {
   margin: 0;
   /* height: 100%;
   min-height: 100%; */
-  background-color: #121212 !important;
+  /* background-color: #121212 !important; */
+  font-size: 1rem;
+  display: grid;
+  min-height: 100vh;
 }
 
 #config > .react-codemirror2 > .CodeMirror {
   height: 500px !important;
-}
-
-main {
-  margin-top: 80px;
-  height: 100%;
-}
-
-footer > .MuiContainer-root {
-  margin-left: 8%;
 }
 
 @media all and (max-width: 700px) and (min-width: 300px) {
@@ -82,18 +123,57 @@ footer > .MuiContainer-root {
   }
 }
 
+#content-wrap {
+  min-height: calc(87vh - 70px);
+}
+
 #content-wrap > .row {
   margin-right: 0%;
 }
 
-#login-container {
+.layout > .container {
+  margin-bottom: 40px;
+}
+
+.navbar {
+  min-height: 60px;
+}
+
+.material-button:hover,
+.material-button:focus {
+  background-color: #007bff !important;
+}
+
+.material-button {
+  color: white !important;
+  background-color: #007bff !important;
+}
+
+main {
+  min-height: calc(87vh - 80px);
+}
+
+.main-container {
   position: relative;
-  min-height: 70vh;
+  margin-top: 80px;
+  margin-bottom: 80px;
+  min-height: calc(87vh - 80px);
+}
+
+.main-container > .container {
+  padding-top: 40px;
+}
+
+@media all and (max-width: 700px) and (min-width: 300px) {
+  .main-container {
+    min-height: calc(117vh - 80px);
+  }
 }
 
 #page-container {
   position: relative;
   min-height: 100vh;
+  padding-top: 40px;
 }
 
 .navbar > .container {
@@ -132,4 +212,47 @@ footer > .MuiContainer-root {
 
 a:hover {
   cursor: pointer;
+}
+
+.menu-item > a {
+  color: gray;
+  font-size: 18px;
+}
+
+.menu-item > a:hover {
+  color: white;
+}
+
+.menu-item > div > a {
+  color: gray;
+  font-size: 18px;
+}
+
+.menu-item > div > a:hover {
+  color: white;
+}
+
+.menu-item {
+  padding-bottom: 2rem;
+}
+
+.bm-menu-wrap {
+  width: 250px !important;
+}
+
+.nav-item > a:hover {
+  text-decoration: none !important;
+}
+
+.nav-link:hover {
+  cursor: pointer;
+}
+
+.highlight-row {
+  background-color: gold !important;
+}
+
+div[role='dialog'] {
+  max-width: 1000px !important;
+  width: 90%;
 }
