--- a/apps/artemis-web/pages/styles.sass
+++ b/apps/artemis-web/pages/styles.sass
@@ -123,7 +123,7 @@ html, body
     max-width: 100% !important
 
 #content-wrap
-  min-height: calc(87vh - 70px)
+  min-height: calc(90vh)
 
   > .row
     margin-right: 0%
@@ -152,7 +152,7 @@ main
   position: relative
   margin-top: 80px
   margin-bottom: 80px
-  min-height: calc(87vh - 80px)
+  min-height: calc(87vh - 20px)
 
   > .container
     padding-top: 40px
