--- a/apps/artemis-web/pages/styles.sass
+++ b/apps/artemis-web/pages/styles.sass
@@ -243,3 +243,9 @@ a:hover
 div[role='dialog']
   max-width: 1000px !important
   width: 90%
+
+input[id='password']
+  height: 56px
+
+.input-password__level
+  margin-top: 8px
